[package]
name = "dmnb_server_relais"
version = "0.1.0"
authors = ["doncato"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
env_logger = "0.9"
chrono = "0.4"
log = "0.4"

# Webserver
actix-web = "3.3.2"
serde = "1"
serde_derive = "1"

# Data Engine
rusqlite = "0.25"
libsqlite3-sys = { version = "0.22.0", features = ["bundled"]}
rand = "0.8"