[package]
name = "dmnb_server"
version = "0.1.0"
authors = ["doncato"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Config file handler
confy = "0.4"

# Logging
env_logger = "0.9"
chrono = "0.4"
log = "0.4"

# count lines
linecount = "0.1.0"

# Webserver
actix-web = "3.3"
serde = "1"
serde_derive = "1"
serde_json = "1"

# Data Engine
rusqlite = "0.25"
libsqlite3-sys = { version = "0.22.0", features = ["bundled"]}
rand = "0.8"

# System information
sysinfo = "0.22"
